--- a/src/screen/HelpWithSpeechPage/style.css
+++ b/src/screen/HelpWithSpeechPage/style.css
@@ -43,29 +43,22 @@
   align-items: center;
   justify-content: center;
   height: 100%;
-  gap: 20px;
-  padding: 20px;
+  gap: 15px; /* 간격을 줄임 */
+  padding: 15px; /* 간격을 줄임 */
 }
 
 .he-input-group {
   width: 100%;
-  margin-bottom: 20px;
+  margin-bottom: 0px; /* 간격을 줄임 */
   text-align: left;
 }
 
-.he-time-checkbox-group {
-  display: flex;
-  align-items: center;
-  gap: 10px;
-}
-
-
 .he-label {
-  margin-bottom: 0; /* label의 하단 여백 제거 */
-}
-
-.he-speech-checkbox {
-  margin-top: 3px; /* checkbox의 상단 여백 제거 */
+  display: block;
+  margin-bottom: 5px;
+  font-weight: bold;
+  font-size: 0.875em;
+  font-family: '맑은 고딕', sans-serif; /* 폰트 설정 */
 }
 
 .he-input[type="text"],
@@ -80,6 +73,7 @@
   border-radius: 4px;
   box-sizing: border-box;
   background-color: #ffffff;
+  font-family: '맑은 고딕', sans-serif; /* 폰트 설정 */
 }
 
 .he-textarea {
@@ -91,11 +85,29 @@
   justify-content: space-between;
   width: 100%;
   max-width: 400px;
-  gap: 10px; /* 키워드 입력 필드 사이의 간격 추가 */
+  gap: 15px; /* 키워드 입력 필드 사이의 간격 줄임 */
 }
 
 .he-keyword-container .he-input {
   flex: 1;
+  font-size: 0.9em; /* 폰트 크기 조절 */
+  font-family: '맑은 고딕', sans-serif; /* 폰트 설정 */
+}
+
+.he-time-checkbox-group {
+  display: flex;
+  align-items: center;
+  margin-bottom: 10px;
+}
+
+.he-speech-checkbox {
+  margin-right: 5px;
+}
+
+.he-time-label {
+  margin-left: 0;
+  transform: translateY(1px);
+  font-family: '맑은 고딕', sans-serif; /* 폰트 설정 */
 }
 
 .he-time-inputs {
@@ -104,6 +116,7 @@
   justify-content: center;
   gap: 5px;
   margin-top: 10px;
+  font-family: '맑은 고딕', sans-serif; /* 폰트 설정 */
 }
 
 .he-time-input {
@@ -122,11 +135,11 @@
   width: 100%;
   border: none;
   border-top: 1px solid #e0e0e0;
-  margin: 20px 0;
+  margin: 0px 0; /* 간격을 줄임 */
 }
 
 .he-notice-container {
-  margin-bottom: 20px;
+  margin-bottom: 0px; /* 간격을 줄임 */
 }
 
 .he-notice-title {
@@ -150,7 +163,6 @@
   border: none;
   border-radius: 4px;
   text-align: center;
-  max-width: 400px;
 }
 
 .he-select {
@@ -161,6 +173,7 @@
   border-radius: 4px;
   box-sizing: border-box;
   background-color: #ffffff;
+  font-family: '맑은 고딕', sans-serif; /* 폰트 설정 */
 }
 
 @media (max-width: 600px) {
