--- a/src/screen/ViewMemoriesPage/style.css
+++ b/src/screen/ViewMemoriesPage/style.css
@@ -3,23 +3,21 @@
 .vi-view-memories-page {
   position: relative; 
   width: 100%;
-  height:100vh;
-  margin : 0px;
+  height:100%;
+  margin : 0;
   background-color: #ffffff;
   box-sizing: border-box;
   border: 5px solid #87CEEB; /* 액자 테두리 추가 */
   border-radius: 15px; /* 둥근 테두리 추가 */
-  
 }
 
 .vi-header {
   display: flex;
   flex-direction: row;
   padding: 16px;
-  margin: 0px auto;
-  width: 91%;
+  margin-left: -10px;
+  width: 100%;
   height:26px;
-  border-radius: 15px;
   background: #FFFFFF;
   box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.08);
   border-bottom: 5px solid #87CEEB; /* 헤더 아래 테두리 추가 */
@@ -32,9 +30,12 @@
   padding: 0px;
   gap: 8px;
   margin: 0;
-  width: 90%;
+  width: 100%;
   height: 100%;
-
+  margin-left: 0px;
+  flex: none;
+  order: 0;
+  flex-grow: 0;
 }
 
 .vi-back-button {
@@ -55,38 +56,36 @@
   font-weight: 500;
   font-size: 16px;
   line-height: 19px;
-  text-align: flex-end;
-  width: 100%;
+  text-align: center;
+  width: 350;
   color: #191919;
-
-
+  margin: 0px;
+  flex: none;
+  order: 0;
+  flex-grow: 0;
 }
 
 .vi-main {
   display: flex;
   flex-direction: column;
-  align-items: flex-start;
-  padding: 15px;
-  gap:0px;
+  justify-content: flex-start;
+  padding: 0px 20px;
+  gap:64px;
   position: relative;
-  width: 96%;
+  width: 97%;
   height: 100%;
-  top: 30px;
-  overflow-y: auto;
+  top: 50px;
 }
 
 .vi-main-1 {
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  gap:15px;
-  width: 100%;
-  max-width: 1200px;
-  background-color: #ffffff;
+  justify-content: flex-start;
+  gap:20px;
   position: relative;
-  z-index: 2;
-  padding-bottom: 5px;
+  width: 100%;
+  height: 80px;
+  background-color: #ffffff;
 }
 
 .vi-search {
@@ -96,8 +95,8 @@
   width: 100%;
   height: 40px;
   padding: 0px;
-  gap: 5px;
-  margin-left: -10px;
+  gap: 10px;
+  margin-left: -5px;
   background-color: #F2F2F2;
   border-radius: 8px;
 }
@@ -115,11 +114,10 @@
   background: #F2F2F2;
   border-radius: 8px;
   margin-top: 5px;
-
   flex: 1;
   order: 0;
   flex-grow: 1;
-
+  min-width: 0;
 }
 
 .vi-search-input::placeholder {
@@ -159,11 +157,11 @@
   display: flex;
   flex-direction: raw;
   justify-content: center;
-  align-items: flex-start;
+  align-items: center;
   padding: 0px 0px 0px 70%;
   gap: 5px;
   width: 100px;
-  height: 20px;
+  height: 30px;
   flex: none;
   order: 0;
   flex-grow: 1;
@@ -178,15 +176,13 @@
   font-size: 15px;
   line-height: 17px;
   display: flex;
-  align-items: flex-end;
+  align-items: center;
   text-align: center;
   color: #666666;
   flex: none;
   order: 0;
   flex-grow: 0;
   line-height: 40px;
-  margin-top: 3%;
-
 }
 
 .vi-sort-button {
@@ -206,16 +202,14 @@
 .vi-sort-icon {
   display: flex;
   flex-direction: column;
-  justify-content: flex-start;
+  justify-content: center;
   align-items: center;
-  gap: 0px;
+  gap: 2px;
   width: 25px;
   height: 40px;
   flex: none;
   order: 0;
   flex-grow: 0;
-  padding-right: 5px;
-
 }
 
 .vi-line1, .vi-line2, .vi-line3 {
@@ -223,7 +217,7 @@
   background: #666666;
   flex: none;
   flex-grow: 0;
-  margin: 4px 0px 1px 7px;
+  margin: 4px 2px 3px 5px;
 }
 
 .vi-line1 {
@@ -232,7 +226,7 @@
 }
 
 .vi-line2 {
-  width: 12px;
+  width: 14px;
   order: 1;
 }
 
@@ -245,7 +239,7 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  gap: 8px;
+  gap: 11px;
   position: absolute;
   top: 100%;
   left: 20px;
@@ -254,9 +248,8 @@
   padding: 10px;
   box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
   height: 75px;
-  width: 111px;
-  margin: 0px 0px 0px 60%;
-  z-index: 1000;
+  width: 110px;
+  margin: 0px 0px 0px 52%;
 }
 
 .vi-button-item {
@@ -297,20 +290,17 @@
   gap: 10px;
   padding: 0px;
   width: 90%;
-  height: 71%;
-  margin-top: 30px;
-  
- 
+  height: auto; 
 }
 
 .vi-content {
   box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
-  padding:20px 0px 17px 0px; 
+  padding:20px 0px 20px 0px; 
   background-color: #ffffff; 
   width: 100%;
-  height: 45%; 
-  gap: 0px;
-  margin: 0px 0px 0px 15px;
+  height: 100%; 
+  gap: 5px;
+  margin: 0px 5px 0px 5px;
   border-top: solid 1px #BFBFBF;
   transition: transform 0.3s ease;
 }
@@ -321,7 +311,7 @@
 
 .vi-title {
   width: 100%;
-  height: 25%;
+  height: 30%;
   font-family: 'Pretendard';
   font-style: normal;
   font-weight: 500;
@@ -330,7 +320,7 @@
   display: flex;
   align-items: center;
   color: #191919;
-  
+  margin-bottom: 10px;
 }
 
 .vi-content-text {
