--- a/src/screen/ViewMemoriesPage/style.css
+++ b/src/screen/ViewMemoriesPage/style.css
@@ -7,13 +7,8 @@
   margin : 0;
   background-color: #ffffff;
   box-sizing: border-box;
-<<<<<<< Updated upstream
   border: 5px solid #87CEEB; /* 액자 테두리 추가 */
   border-radius: 15px; /* 둥근 테두리 추가 */
-=======
-  border-radius: 3px; /* 둥근 테두리 추가 */
-  
->>>>>>> Stashed changes
 }
 
 .vi-header {
@@ -23,13 +18,9 @@
   margin-left: -10px;
   width: 100%;
   height:26px;
-<<<<<<< Updated upstream
-=======
-  
->>>>>>> Stashed changes
   background: #FFFFFF;
   box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.08);
-  border-bottom: 3px solid #F2F2F2; /* 헤더 아래 테두리 추가 */
+  border-bottom: 5px solid #87CEEB; /* 헤더 아래 테두리 추가 */
 }
 
 .vi-header-div {
@@ -362,15 +353,4 @@
   text-align: center;
   color: #BFBFBF;
   margin: 0px 0px 0px 56%;
-}
-.Bookmark {
-  cursor: pointer;
-  margin-left: 5%;
-  width: 20px; /* Size of the bookmark icon */
-  height: 20px; /* Size of the bookmark icon */
-}
-
-.Bookmark svg {
-  width: 100%;
-  height: 100%;
 }
