--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-/* 전체 문서의 기본 스타일을 설정 */
+/* 공통 스타일 설정 */
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -8,42 +8,32 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
-/* 코드 요소에 대한 스타일 설정 */
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
 
-/* body와 html 요소의 기본 스타일을 설정 */
 body, html {
   margin: 0;
   padding: 0;
-  max-width: 400px; /* 최대 너비를 400px로 설정하여 중앙 정렬 */
-  margin-left: auto;
-  margin-right: auto;
-  background-color: #f2f2f2; /* 배경색: 밝은 회색  */
+  background-color: #f2f2f2;
 }
 
-/* 앱 컨테이너 스타일 설정 */
 .app-container {
   position: relative;
-  max-width: 400px; /* 최대 너비 400Px 설정*/
-  margin-left: auto;
-  margin-right: auto;
-  background-color: #f2f2f2; /* 배경색: 밝은 회색*/
+  background-color: #f2f2f2;
 }
 
-/* 모달 배경 스타일 설정*/
 .modal-backdrop {
   position: fixed;
   top: 0;
   left: 0;
   right: 0;
   bottom: 0;
-  background-color: rgba(255, 255, 255, 0.8); /* 반투명한 흰색 배경 설정 */
+  background-color: rgba(255, 255, 255, 0.8);
   display: flex;
   justify-content: center;
   align-items: center;
-  z-index: 1000; 
+  z-index: 1000;
   overflow: hidden;
 }
