--- a/src/screen/mobile/MainPage/style.css
+++ b/src/screen/mobile/MainPage/style.css
@@ -16,7 +16,7 @@
   position: sticky;
   top: 0;
   z-index: 1000;
-  border-bottom: 5px solid #87CEEB; /* 헤더 아래 테두리 추가 */
+  border-bottom: 5px solid #87CEEB;
 }
 
 .main-logo-container {
@@ -50,9 +50,9 @@
   flex-grow: 1;
   width: 97.5%;
   background-color: #ffffff;
-  border: 5px solid #87CEEB; /* 액자 느낌을 주는 테두리 */
-  border-top: none; /* 헤더와 겹치는 상단 테두리 제거 */
-  border-radius: 0 0 10px 10px; /* 하단 모서리 둥글게 */
+  border: 5px solid #87CEEB;
+  border-top: none;
+  border-radius: 0 0 10px 10px;
 }
 
 .content {
@@ -67,20 +67,28 @@
 .image-frame {
   width: 70%;
   height: 200px;
-  background-color: #f2f2f2;
-  border: 3px solid #87CEEB; /* 하늘색 액자 효과 */
-  border-radius: 10px; /* 액자 모서리 둥글게 */
+  border: 3px solid #87CEEB;
+  border-radius: 10px;
   margin-bottom: 20px;
   display: flex;
   align-items: center;
   justify-content: center;
+  transition: background-color 0.3s;
+}
+
+.image-frame.default {
+  background-color: #f2f2f2;
+}
+
+.image-frame.hovered {
+  background-color: #e0e0e0;
 }
 
 .image {
   width: 100%;
   height: 100%;
   object-fit: cover;
-  border-radius: 10px; /* 이미지 모서리 둥글게 */
+  border-radius: 10px;
 }
 
 .main-button {
