--- a/src/screen/mobile/ViewMemoriesPage/style.css
+++ b/src/screen/mobile/ViewMemoriesPage/style.css
@@ -3,21 +3,23 @@
 .vi-view-memories-page {
   position: relative; 
   width: 100%;
-  height:100%;
-  margin : 0;
+  height:100vh;
+  margin : 0px;
   background-color: #ffffff;
   box-sizing: border-box;
   border: 5px solid #87CEEB; /* 액자 테두리 추가 */
   border-radius: 15px; /* 둥근 테두리 추가 */
+  
 }
 
 .vi-header {
   display: flex;
   flex-direction: row;
   padding: 16px;
-  margin-left: -10px;
-  width: 100%;
+  margin: 0px auto;
+  width: 91%;
   height:26px;
+  border-radius: 15px;
   background: #FFFFFF;
   box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.08);
   border-bottom: 5px solid #87CEEB; /* 헤더 아래 테두리 추가 */
@@ -30,12 +32,9 @@
   padding: 0px;
   gap: 8px;
   margin: 0;
-  width: 100%;
+  width: 90%;
   height: 100%;
-  margin-left: 0px;
-  flex: none;
-  order: 0;
-  flex-grow: 0;
+
 }
 
 .vi-back-button {
@@ -56,36 +55,38 @@
   font-weight: 500;
   font-size: 16px;
   line-height: 19px;
-  text-align: center;
-  width: 350;
+  text-align: flex-end;
+  width: 100%;
   color: #191919;
-  margin: 0px;
-  flex: none;
-  order: 0;
-  flex-grow: 0;
+
+
 }
 
 .vi-main {
   display: flex;
   flex-direction: column;
-  justify-content: flex-start;
-  padding: 0px 20px;
-  gap:64px;
+  align-items: flex-start;
+  padding: 15px;
+  gap:0px;
   position: relative;
-  width: 97%;
+  width: 96%;
   height: 100%;
-  top: 50px;
+  top: 30px;
+  overflow-y: auto;
 }
 
 .vi-main-1 {
   display: flex;
   flex-direction: column;
-  justify-content: flex-start;
-  gap:20px;
-  position: relative;
+  justify-content: center;
+  align-items: center;
+  gap:15px;
   width: 100%;
-  height: 80px;
+  max-width: 1200px;
   background-color: #ffffff;
+  position: relative;
+  z-index: 2;
+  padding-bottom: 5px;
 }
 
 .vi-search {
@@ -95,8 +96,8 @@
   width: 100%;
   height: 40px;
   padding: 0px;
-  gap: 10px;
-  margin-left: -5px;
+  gap: 5px;
+  margin-left: -10px;
   background-color: #F2F2F2;
   border-radius: 8px;
 }
@@ -114,10 +115,11 @@
   background: #F2F2F2;
   border-radius: 8px;
   margin-top: 5px;
+
   flex: 1;
   order: 0;
   flex-grow: 1;
-  min-width: 0;
+
 }
 
 .vi-search-input::placeholder {
@@ -157,11 +159,11 @@
   display: flex;
   flex-direction: raw;
   justify-content: center;
-  align-items: center;
+  align-items: flex-start;
   padding: 0px 0px 0px 70%;
   gap: 5px;
   width: 100px;
-  height: 30px;
+  height: 20px;
   flex: none;
   order: 0;
   flex-grow: 1;
@@ -176,13 +178,15 @@
   font-size: 15px;
   line-height: 17px;
   display: flex;
-  align-items: center;
+  align-items: flex-end;
   text-align: center;
   color: #666666;
   flex: none;
   order: 0;
   flex-grow: 0;
   line-height: 40px;
+  margin-top: 3%;
+
 }
 
 .vi-sort-button {
@@ -202,14 +206,16 @@
 .vi-sort-icon {
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: flex-start;
   align-items: center;
-  gap: 2px;
+  gap: 0px;
   width: 25px;
   height: 40px;
   flex: none;
   order: 0;
   flex-grow: 0;
+  padding-right: 5px;
+
 }
 
 .vi-line1, .vi-line2, .vi-line3 {
@@ -217,7 +223,7 @@
   background: #666666;
   flex: none;
   flex-grow: 0;
-  margin: 4px 2px 3px 5px;
+  margin: 4px 0px 1px 7px;
 }
 
 .vi-line1 {
@@ -226,7 +232,7 @@
 }
 
 .vi-line2 {
-  width: 14px;
+  width: 12px;
   order: 1;
 }
 
@@ -239,7 +245,7 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  gap: 11px;
+  gap: 8px;
   position: absolute;
   top: 100%;
   left: 20px;
@@ -248,8 +254,9 @@
   padding: 10px;
   box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
   height: 75px;
-  width: 110px;
-  margin: 0px 0px 0px 52%;
+  width: 111px;
+  margin: 0px 0px 0px 60%;
+  z-index: 1000;
 }
 
 .vi-button-item {
@@ -290,17 +297,20 @@
   gap: 10px;
   padding: 0px;
   width: 90%;
-  height: auto; 
+  height: 71%;
+  margin-top: 30px;
+  
+ 
 }
 
 .vi-content {
   box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
-  padding:20px 0px 20px 0px; 
+  padding:20px 0px 17px 0px; 
   background-color: #ffffff; 
   width: 100%;
-  height: 100%; 
-  gap: 5px;
-  margin: 0px 5px 0px 5px;
+  height: 45%; 
+  gap: 0px;
+  margin: 0px 0px 0px 15px;
   border-top: solid 1px #BFBFBF;
   transition: transform 0.3s ease;
 }
@@ -311,7 +321,7 @@
 
 .vi-title {
   width: 100%;
-  height: 30%;
+  height: 25%;
   font-family: 'Pretendard';
   font-style: normal;
   font-weight: 500;
@@ -320,7 +330,7 @@
   display: flex;
   align-items: center;
   color: #191919;
-  margin-bottom: 10px;
+  
 }
 
 .vi-content-text {
