--- a/src/screen/mobile/ViewMemoriesPage/style.css
+++ b/src/screen/mobile/ViewMemoriesPage/style.css
@@ -88,6 +88,7 @@
   width: 100%;
   height: 40px;
   padding: 0;
+  margin-right: 8px;
   gap: 5px;
   background-color: #F2F2F2;
   border-radius: 8px;
@@ -95,7 +96,7 @@
 
 .vi-search-input {
   flex: 1;
-  padding: 8px 12px;
+  padding: 5px 12px;
   border: none;
   background: #F2F2F2;
   border-radius: 8px;
@@ -115,14 +116,15 @@
   border: none;
   background: none;
   cursor: pointer;
+  margin-right: 15px;
 }
 
 .vi-list-button {
   display: flex;
   justify-content: center;
-  align-items: center;
-  padding-left: 70%;
-  gap: 5px;
+  align-items: left;
+  padding-left: 75%;
+  gap: 0px;
 }
 
 .vi-sort-label {
@@ -130,7 +132,7 @@
   font-weight: 400;
   font-size: 15px;
   color: #666666;
-  margin-top: 3%;
+  margin-right: 5px;
 }
 
 .vi-sort-button {
@@ -138,7 +140,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  width: 30px;
+  width: 35px;
   height: 25px;
   border: none;
   border-radius: 3px;
@@ -149,7 +151,7 @@
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
-  align-items: center;
+  align-items: left;
   gap: 0px;
   width: 25px;
   height: 40px;
@@ -159,7 +161,7 @@
 .vi-line1, .vi-line2, .vi-line3 {
   height: 1px;
   background: #666666;
-  margin: 4px 0;
+  margin: 2px 0;
 }
 
 .vi-line1 {
@@ -177,22 +179,22 @@
 .vi-button-list {
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  gap: 8px;
+  justify-content: flex-end;
+  gap: 7px;
   position: absolute;
   top: 100%;
-  left: 20px;
+  right: 10px;
   background: #FFFFFF;
   border-radius: 8px;
-  padding: 10px;
+  padding: 8px;
   box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
-  height: 75px;
-  width: 111px;
+  height: 80px;
+  width: 30%;
   z-index: 1000;
 }
 
 .vi-button-item {
-  width: 110px;
+  width: 115px;
   height: 17px;
   font-family: 'Pretendard' !important;
   font-weight: 400;
@@ -201,6 +203,9 @@
   border: none;
   background: none;
   cursor: pointer;
+  display: flex;
+  align-items: flex-end;
+  justify-content: left;
 }
 
 .vi-button-item .vi-check-icon {
@@ -230,11 +235,13 @@
 
 .vi-content {
   box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
-  padding: 20px 0px 17px 0px; 
+  padding: 20px 0px 0px 0px; 
   background-color: #ffffff; 
   margin: 0 15px; /* Adjusted margin for consistent spacing */
   border-top: solid 1px #BFBFBF;
   transition: transform 0.3s ease;
+  width: 95%;
+  height: 75%;
 }
 
 .vi-content:hover {
@@ -250,11 +257,12 @@
   font-weight: 500;
   font-size: 15px;
   color: #191919;
+  margin-bottom: 15px;
 }
 
 .vi-content-text {
   width: 100%;
-  height: 35px;
+  height: 55%;
   font-family: 'Pretendard';
   font-weight: 400;
   font-size: 14px;
@@ -264,6 +272,7 @@
   -webkit-line-clamp: 2;
   overflow: hidden;
   text-overflow: ellipsis;
+  margin-bottom: 15px;
 }
 
 .vi-date {
@@ -272,8 +281,11 @@
   font-family: 'Pretendard';
   font-weight: 400;
   font-size: 13px;
-  color: #BFBFBF;
+  color: #BFBFBF; 
+
   text-align: right; /* Align date to the right */
+  display: right;
+
 }
 
 .Bookmark {
